data/derived/sp14/progs/unify/prog2447.ml.out
Characters 69-71:
  Format.sprintf "%d" !rv;;
                       ^^
Error: This expression has type float but an expression was expected of type
         'a ref
